test fix overflow mobile

--- a/css/main.css
+++ b/css/main.css
@@ -388,11 +388,14 @@ a {
   height: 100vh;
   max-height: 100%; }
 
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden; }
+
 body {
   overflow: hidden; }
   @media (max-width: 1200px) {
     body {
-      position: fixed;
       overflow-x: hidden;
       overflow-y: visible; } }
 
